--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -2,6 +2,12 @@
 
 .footer {
   background: #1B463C;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-around;
 }
 
 .BTN_Footer {
